# Market-Making-Optimizer

./: .gitignore  CMakeLists.txt  README.md  build_project.bat  trading_dashboard.py
database/: 01_schema.sql  02_as_engine_schema.sql  03_simulation_tracking.sql
include/: AvellanedaStoikov.h  DatabaseManager.h  Fill.h  LatencyBenchmark.h  Logger.h  MarketData.h  MarketSimulator.h  PnLTracker.h  Position.h  Quote.h  Symbol.h
src/bindings/: python_bindings.cpp
src/core/: AvellanedaStoikov.cpp  BinanceWebSocket.cpp  DatabaseManager.cpp  Fill.cpp  LatencyBenchmark.cpp  Logger.cpp  MarketData.cpp  MarketSimulator.cpp  PnLTracker.cpp  Position.cpp  Quote.cpp
src/examples/: libws_test.cpp  main.cpp  simple_as_engine.cpp  simulation_test.cpp
templates/: dashboard.html
tests/: CMakeLists.txt
